--- a/templates/food_level1.html
+++ b/templates/food_level1.html
@@ -229,11 +229,14 @@
       let initialArrangement = []; // To store the initial arrangement of food items
 
       // Fetch session data
-      function fetchSessionData() {
+      function fetchSessionData(retries = 3) {
+        console.log("Fetching session data...");
         return fetch("/get_session_data")
           .then((response) => {
             if (!response.ok) {
-              throw new Error("Failed to fetch session data");
+              throw new Error(
+                `Failed to fetch session data, status: ${response.status}`
+              );
             }
             return response.json();
           })
@@ -243,8 +246,13 @@
           })
           .catch((error) => {
             console.error("Error:", error);
+            if (retries > 0) {
+              console.log(`Retrying... (${3 - retries + 1})`);
+              return fetchSessionData(retries - 1);
+            }
           });
       }
+
       function clearAndExit() {
         clearInterval(timerInterval);
         localStorage.clear();
