--- a/templates/game2_easy_level.html
+++ b/templates/game2_easy_level.html
@@ -233,30 +233,18 @@
 
       let sessionData = {};
 
-      async function fetchSessionData(retries = 3) {
-        console.log("Fetching session data...");
-        return fetch("/get_session_data")
-          .then((response) => {
-            if (!response.ok) {
-              throw new Error(
-                `Failed to fetch session data, status: ${response.status}`
-              );
-            }
-            return response.json();
-          })
-          .then((data) => {
-            sessionData = data;
-            console.log("Session Data:", sessionData);
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-            if (retries > 0) {
-              console.log(`Retrying... (${3 - retries + 1})`);
-              return fetchSessionData(retries - 1);
-            }
-          });
+      async function fetchSessionData() {
+        try {
+          const response = await fetch("/get_session_data");
+          if (!response.ok) {
+            throw new Error("Failed to fetch session data");
+          }
+          sessionData = await response.json();
+          console.log("Session Data:", sessionData);
+        } catch (error) {
+          console.error("Error:", error);
+        }
       }
-
       const scores = [
         { id: 1, name: "Word 1", link: "game2_in", storageKey: "in_score" },
         { id: 2, name: "Word 2", link: "game2_out", storageKey: "out_score" },
